--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.0",
     "swagger-ui-express": "^4.6.3",
     "validator": "^13.9.0",
